--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>multiblockapi</artifactId>
-    <groupId>de.tr7zw</groupId>
+    <groupId>com.github.aj4real</groupId>
     <version>1.0-SNAPSHOT</version>
 	
 	<properties>
